<resources>
    <string name="app_name">zhangruilong</string>
    <string name="start_text">电脑想了一个1-10的数，猜猜是多少。</string>
    <string name="start">进入游戏</string>
    <string name="submit">提交</string>
    <string name="welcome">欢迎游玩猜大小</string>
    <string name="big">猜大了</string>
    <string name="small">猜小了</string>
    <string name="success">猜对了</string>
    <string name="restart">重新开始</string>
    <string name="restart_text">点击下面的按钮重新开始</string>
    <string name="defaultText">猜一个数</string>
    <string name="error">请输入数字</string>
    <string name="reset">已重置</string>
</resources>